# django-active-link

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
active_link/: apps.py
active_link/templatetags/: active_link_tags.py
docs/: conf.py  index.rst  installation.rst  usage.rst
tests/: settings.py  test_models.py  test_tags.py  urls.py
tests/templates/: 404.html  detailed_action_kwargs.html  detailed_action_kwargs_multiple.html  detailed_action_kwargs_multiple_specific.html  detailed_action_kwargs_not_active.html  simple.html  simple_custom_class.html  simple_strict.html  simple_strict_no_match.html
